<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/color_text"
            android:textSize="50sp"
            android:textStyle="bold"
            android:text="@string/rimo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:fontFamily="sans-serif"
            android:textColor="@color/color_text"
            android:textStyle="normal"
            android:textSize="25sp"
            android:text="@string/wallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>
    <TextView
        android:textColor="@color/color_text_i"
        android:textSize="20sp"
        android:text="@string/secure_your_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>