<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/rimo_main_gradaint"
    tools:context=".LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include
                    layout="@layout/title_layout"
                    />
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginTop="100dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/phoneNumber_id"
                        android:background="@drawable/input_fil"
                        android:padding="20dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:hint="@string/phone_number"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:id="@+id/password_id"
                        android:background="@drawable/input_fil"
                        android:padding="20dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:inputType="textPassword"
                        android:layout_marginTop="40dp"
                        android:hint="@string/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/login_id"
                       android:background="@color/color_btn"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="50dp"
                        android:textAllCaps="false"
                        android:text="@string/login"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:textSize="22sp"
                        android:text="@string/or"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:text="@string/create_an_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>




</LinearLayout>